objects/npe03__Recurring_Donation__c.object
<CustomObject>
    <description>Recurring Donations track charitable giving where a donor specifies an amount of money to be given on a regular basis.</description>
    <fields>
        <fullName>npe03__Amount__c</fullName>
        <description>The amount for each installment Opportunity.</description>
        <inlineHelpText>The amount for each installment Opportunity.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe03__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N80000002bOmREAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe03__Date_Established__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The initial inception date for this Recurring Donation. The default is the current date.</description>
        <inlineHelpText>The initial inception date for this recurring donation. The default is the current date.</inlineHelpText>
        <label>Date Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe03__Donor_Name__c</fullName>
        <formula>if(
  LEN(npe03__Contact__c)&gt;0,
  npe03__Contact__r.FirstName  &amp; &quot; &quot; &amp; npe03__Contact__r.LastName,
   npe03__Organization__r.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe03__Installment_Amount__c</fullName>
        <formula>IF( 

OR(
(text(npe03__Schedule_Type__c)=$Label.npe03__RecurringDonationMultiplyValue), 
(text(npe03__Open_Ended_Status__c)=$Label.npe03__RecurringDonationOpenStatus)
) 
, npe03__Amount__c , IF(npe03__Installments__c&gt;0,npe03__Amount__c / npe03__Installments__c,0)




)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe03__Installment_Period__c</fullName>
        <description>How often you’ll receive the donations. NOTE: Changing the installment period for an existing Fixed-Length Recurring Donation may result in the loss and re-creation of open opportunities. Any data associated with those opportunities may be lost.</description>
        <inlineHelpText>The Installment Period along with Installment Frequency defines the installment schedule of this Recurring Donation. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule is defined as &quot;every 3 months&quot;.</inlineHelpText>
        <label>Installment Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>1st and 15th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe03__Installments__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of installments (donations) you expect to receive. For Fixed-Length Recurring Donations only.</description>
        <inlineHelpText>Number of installments.  Only used with Non-Open Ended Recurring Donations.</inlineHelpText>
        <label>Number of Planned Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npe03__Last_Payment_Date__c</fullName>
        <description>NPSP calculates this value automatically based on the last time an installment Opportunity was marked paid (read only).</description>
        <inlineHelpText>NPSP calculates this value automatically based on the last time an installment Opportunity was marked paid (read only).</inlineHelpText>
        <label>Last Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe03__Next_Payment_Date__c</fullName>
        <description>Holds the date of the next recurring payment.  Manually editing this field will recalculate all future opportunity&apos;s close dates based on the scheduled defined.</description>
        <inlineHelpText>The number of days before or after the Next Donation Date that NPSP won&apos;t create a new installment Opportunity if the next open Opportunity&apos;s Close Date is changed. Applies only to Recurring Donations where Installment Period is Monthly or Yearly.</inlineHelpText>
        <label>Next Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe03__Open_Ended_Status__c</fullName>
        <label>Open Ended Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe03__Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recurring Donations</relationshipLabel>
        <relationshipName>RecurringDonations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe03__Paid_Amount__c</fullName>
        <description>The total amount paid on this Recurring Donation. Calculated automatically as the total amount of all Closed/Won installment Opportunities (read only).</description>
        <inlineHelpText>The total amount paid on this Recurring Donation. Calculated automatically as the total amount of all Closed/Won installment Opportunities (read only).</inlineHelpText>
        <label>Total Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe03__Recurring_Donation_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Recurring Donations</relationshipLabel>
        <relationshipName>Recurring_Donations_Pledges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe03__Schedule_Type__c</fullName>
        <description>Tells Salesforce how to compute the amount for each child opportunity, based on what you&apos;ve entered in the Amount field. For Fixed-Length Recurring Donations only.</description>
        <inlineHelpText>Whether the Amount is used for each installment (Multiple By), or Amount is split between installments (Divide By).  Only used with Non-Open Ended Recurring Donations.</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiply By</fullName>
                </value>
                <value>
                    <fullName>Divide By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe03__Total_Paid_Installments__c</fullName>
        <description>Total number of installment Opportunities paid on this Recurring Donation (read only).</description>
        <inlineHelpText>Total number of installment Opportunities paid on this Recurring Donation (read only).</inlineHelpText>
        <label>Number Of Paid Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npe03__Total__c</fullName>
        <formula>IF(TEXT( npe03__Open_Ended_Status__c) =  $Label.npe03__RecurringDonationOpenStatus, 0,
CASE(
 npe03__Schedule_Type__c ,
&quot;Multiply By&quot;, npe03__Installments__c * npe03__Amount__c ,
&quot;Divide By&quot;,npe03__Amount__c
,0
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__ACH_Last_4__c</fullName>
        <description>The last four digits of the bank account used for this transaction.</description>
        <inlineHelpText>The last four digits of the bank account used for this transaction.</inlineHelpText>
        <label>ACH Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Always_Use_Last_Day_Of_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sets future monthly, custom monthly, or quarterly donation installments to the last day of the month, regardless of Next Donation Date. Installment period must be Monthly or Quarterly, or a custom installment period using months.</inlineHelpText>
        <label>Always use last day of month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__CardExpirationMonth__c</fullName>
        <description>The expiration month of the card used for this Recurring Donation.</description>
        <inlineHelpText>The expiration month of the card used for this Recurring Donation.</inlineHelpText>
        <label>Card Expiration Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CardExpirationYear__c</fullName>
        <description>The expiration year of the card used for this Recurring Donation.</description>
        <inlineHelpText>The expiration year of the card used for this Recurring Donation.</inlineHelpText>
        <label>Card Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__CardLast4__c</fullName>
        <description>The last four digits of the card used for this Recurring Donation.</description>
        <inlineHelpText>The last four digits of the card used for this Recurring Donation.</inlineHelpText>
        <label>Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__ChangeType__c</fullName>
        <description>The type of change (Upgrade, Downgrade, etc.) this Update represents.</description>
        <inlineHelpText>The type of change (Upgrade, Downgrade, etc.) this Update represents.</inlineHelpText>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__ClosedReason__c</fullName>
        <description>The reason this Recurring Donation has its current Status value.</description>
        <inlineHelpText>The reason this Recurring Donation has its current Status value.</inlineHelpText>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Card Expired</fullName>
                </value>
                <value>
                    <fullName>Commitment Completed</fullName>
                </value>
                <value>
                    <fullName>Deceased Donor</fullName>
                </value>
                <value>
                    <fullName>Financial Difficulty</fullName>
                </value>
                <value>
                    <fullName>No Longer Interested</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__CommitmentId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External identifier for Salesforce.org payment service integration.</description>
        <externalId>true</externalId>
        <inlineHelpText>External identifier for Salesforce.org payment service integration.</inlineHelpText>
        <label>Elevate Recurring Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>npsp__CurrentYearValue__c</fullName>
        <description>This Recurring Donation&apos;s total amount for the current calendar or fiscal year (read only). Includes Closed Won Opportunities plus future installments for the rest of the year.</description>
        <inlineHelpText>This Recurring Donation&quot;s total amount for the current calendar or fiscal year (read only). Includes Closed Won Opportunities plus future installments for the rest of the year.</inlineHelpText>
        <label>Current Year Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Day_of_Month__c</fullName>
        <inlineHelpText>Sets future monthly, custom monthly, or quarterly donation installments to the selected day of the month, regardless of Next Donation Date. NOTE: If the Always use last day of month checkbox is selected, it supersedes the Day of Month value.</inlineHelpText>
        <label>Day of Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__DisableFirstInstallment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents creation of the first installment Opportunity for a new Recurring Donation, regardless of the Installment Opportunity Auto-Creation setting in NPSP Settings.</description>
        <inlineHelpText>Prevents creation of the first installment Opportunity for a new Recurring Donation, regardless of the Installment Opportunity Auto-Creation setting in NPSP Settings.</inlineHelpText>
        <label>Disable First Installment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__EndDate__c</fullName>
        <description>The date on which this Recurring Donation was closed.</description>
        <inlineHelpText>The date on which this Recurring Donation was closed.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__InstallmentFrequency__c</fullName>
        <description>The Installment Frequency along with Installment Period defines the installment schedule of this Recurring Donation. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule is defined as &quot;every 3 months&quot;.</description>
        <inlineHelpText>The Installment Frequency along with Installment Period defines the installment schedule of this Recurring Donation. For example, if Installment Period is Monthly and Installment Frequency is 3, the schedule is defined as &quot;every 3 months&quot;.</inlineHelpText>
        <label>Installment Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__LastElevateEventPlayed__c</fullName>
        <description>The last Elevate event played resulting in an update to this Recurring Donation.</description>
        <externalId>true</externalId>
        <inlineHelpText>The last Elevate event played resulting in an update to this Recurring Donation.</inlineHelpText>
        <label>Last Elevate Event Played</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__LastElevateVersionPlayed__c</fullName>
        <description>An Integer that represents the last Elevate event version played resulting in an update to this Recurring Donation. Incremented automatically after each call to the Elevate API for changes. Used to prevent circular updates and to ensure the latest version is never overwritten.</description>
        <inlineHelpText>An Integer that represents the last Elevate event version played resulting in an update to this Recurring Donation. Incremented automatically after each call to the Elevate API for changes. Used to prevent circular updates and to ensure the latest version is never overwritten.</inlineHelpText>
        <label>Last Elevate Version Played</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__NextYearValue__c</fullName>
        <description>This Recurring Donation&apos;s total expected amount for the next calendar or fiscal year (read only).</description>
        <inlineHelpText>This Recurring Donation&quot;s total expected amount for the next calendar or fiscal year (read only).</inlineHelpText>
        <label>Next Year Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__PaymentMethod__c</fullName>
        <description>The form of payment for this Recurring Donation. NPSP automatically copies the selected value to each related Payment record.</description>
        <inlineHelpText>The form of payment for this Recurring Donation. NPSP automatically copies the selected value to each related Payment record.</inlineHelpText>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__RecurringType__c</fullName>
        <description>Select Open for an ongoing Recurring Donation. Select Fixed for a Recurring Donation that has a specific number of installments. For Fixed, you must also populate the Number of Planned Installments field.</description>
        <inlineHelpText>Select Open for an ongoing Recurring Donation. Select Fixed for a Recurring Donation that has a specific number of installments. For Fixed, you must also populate the Number of Planned Installments field.</inlineHelpText>
        <label>Recurring Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date that new or updated schedule information (Amount, Day of Month, etc.) for this Recurring Donation takes effect. The default is the current date.</description>
        <inlineHelpText>The date that new or updated schedule information (Amount, Day of Month, etc.) for this Recurring Donation takes effect. The default is the current date.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Status__c</fullName>
        <description>Indicates if this Recurring Donation is actively in use, temporarily suspended, or closed.</description>
        <inlineHelpText>Indicates if this Recurring Donation is actively in use, temporarily suspended, or closed.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Lapsed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Recurring Donation</label>
    <listViews>
        <fullName>All_Recurring_Donations</fullName>
        <columns>NAME</columns>
        <columns>npsp__Status__c</columns>
        <columns>npe03__Amount__c</columns>
        <columns>npe03__Next_Payment_Date__c</columns>
        <columns>npe03__Installment_Period__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Recurring Donations</label>
    </listViews>
    <nameField>
        <label>Recurring Donation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>